--- a/TaskManager/bin/view/NewTask.fxml
+++ b/TaskManager/bin/view/NewTask.fxml
@@ -8,11 +8,12 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
@@ -44,16 +45,6 @@
             <Insets top="95.0" />
          </GridPane.margin>
       </Line>
-      <Circle fill="WHITE" radius="27.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <GridPane.margin>
-            <Insets bottom="30.0" top="6.0" />
-         </GridPane.margin>
-      </Circle>
-      <Label text="LOGO" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <GridPane.margin>
-            <Insets top="25.0" />
-         </GridPane.margin>
-      </Label>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Name :" GridPane.rowIndex="1">
          <GridPane.margin>
             <Insets left="5.0" top="25.0" />
@@ -64,13 +55,8 @@
             <Insets left="50.0" top="20.0" />
          </GridPane.margin>
       </TextField>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="2">
+      <AnchorPane fx:id="NewTask_Pane" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="2">
          <children>
-            <Text layoutX="29.0" layoutY="292.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assign to :">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Text>
             <Text layoutX="30.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description :">
                <font>
                   <Font size="16.0" />
@@ -82,47 +68,48 @@
                   <Font size="15.0" />
                </font>
             </Text>
+            <MenuButton fx:id="NewTask_author" layoutX="95.0" layoutY="118.0" mnemonicParsing="false" text="Author" />
             <Text layoutX="30.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of creation : ">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
+            <DatePicker fx:id="NewTask_creationDate" layoutX="158.0" layoutY="162.0" />
             <Text layoutX="30.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Priority :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
+            <MenuButton fx:id="NewTask_priority" layoutX="99.0" layoutY="194.0" mnemonicParsing="false" text="Priority">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Action 1" />
+                <MenuItem mnemonicParsing="false" text="Action 2" />
+                  <MenuItem mnemonicParsing="false" text="Action 3" />
+              </items>
+            </MenuButton>
             <Text layoutX="31.0" layoutY="255.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Deadline :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
+            <DatePicker fx:id="NewTask_deadline" layoutX="107.0" layoutY="236.0" />
             <Button fx:id="NewTask_createTask" layoutX="449.0" layoutY="174.0" mnemonicParsing="false" onAction="#createTask" text="Create">
                <font>
                   <Font size="40.0" />
                </font>
             </Button>
-            <DatePicker fx:id="NewTask_creationDate" layoutX="158.0" layoutY="162.0" />
-            <MenuButton fx:id="NewTask_priority" layoutX="99.0" layoutY="194.0" mnemonicParsing="false" text="Priority">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Action 1" />
-                <MenuItem mnemonicParsing="false" text="Action 2" />
-              </items>
-            </MenuButton>
-            <DatePicker fx:id="NewTask_deadline" layoutX="107.0" layoutY="236.0" />
-            <MenuButton fx:id="NewTask_performer" layoutX="109.0" layoutY="273.0" mnemonicParsing="false" text="Performer">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Action 1" />
-                <MenuItem mnemonicParsing="false" text="Action 2" />
-              </items>
-            </MenuButton>
-            <MenuButton fx:id="NewTask_author" layoutX="95.0" layoutY="118.0" mnemonicParsing="false" text="Author">
-               <items>
-                  <MenuItem mnemonicParsing="false" text="Action 1" />
-                  <MenuItem mnemonicParsing="false" text="Action 2" />
-               </items>
-            </MenuButton>
+            <Text layoutX="29.0" layoutY="292.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assign to :">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Text>
+            <MenuButton fx:id="NewTask_performer" layoutX="109.0" layoutY="273.0" mnemonicParsing="false" text="Performer" />
          </children>
       </AnchorPane>
+      <ImageView fitHeight="61.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+         <image>
+            <Image url="@../image/Logoensim.gif" />
+         </image>
+      </ImageView>
    </children>
 </GridPane>
