--- a/TaskManager/src/view/TaskManager.fxml
+++ b/TaskManager/src/view/TaskManager.fxml
@@ -6,18 +6,19 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane cache="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="478.0" prefWidth="775.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
+<GridPane cache="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="LEFT_TO_RIGHT" prefHeight="478.0" prefWidth="775.0" stylesheets="@TaskManager.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
   <columnConstraints>
-    <ColumnConstraints hgrow="NEVER" maxWidth="400.0" minWidth="10.0" prefWidth="135.0" />
-    <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="495.0" minWidth="10.0" prefWidth="339.0" />
-      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="495.0" minWidth="10.0" prefWidth="135.0" />
+    <ColumnConstraints hgrow="NEVER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="150.0" />
+    <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="495.0" minWidth="10.0" prefWidth="447.0" />
+      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="150.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="TOP" vgrow="SOMETIMES" />
@@ -25,22 +26,12 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label alignment="CENTER" prefHeight="149.0" prefWidth="325.0" text="Task Manager" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+      <Label alignment="CENTER" prefHeight="98.0" prefWidth="363.0" styleClass="Title" text="Task Manager" GridPane.columnIndex="1" GridPane.halignment="CENTER">
          <font>
-            <Font size="50.0" />
+            <Font name="System Bold Italic" size="45.0" />
          </font>
          <padding>
             <Insets top="25.0" />
-         </padding>
-      </Label>
-      <Circle fill="WHITE" radius="43.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="2">
-         <GridPane.margin>
-            <Insets right="5.0" top="5.0" />
-         </GridPane.margin>
-      </Circle>
-      <Label text="LOGO" GridPane.columnIndex="2">
-         <padding>
-            <Insets right="30.0" top="40.0" />
          </padding>
       </Label>
       <Label text="Username :" GridPane.columnIndex="1" GridPane.rowIndex="1">
@@ -48,31 +39,25 @@
             <Font size="30.0" />
          </font>
          <GridPane.margin>
-            <Insets bottom="50.0" right="235.0" />
+            <Insets right="235.0" />
          </GridPane.margin>
-         <padding>
-            <Insets bottom="50.0" />
-         </padding>
       </Label>
       <Label prefHeight="92.0" prefWidth="146.0" text="Password :" GridPane.columnIndex="1" GridPane.rowIndex="1">
-         <padding>
-            <Insets bottom="50.0" top="50.0" />
-         </padding>
          <font>
             <Font size="30.0" />
          </font>
          <GridPane.margin>
-            <Insets right="235.0" />
+            <Insets bottom="105.0" right="235.0" />
          </GridPane.margin>
       </Label>
-      <TextField fx:id="TaskManager_username" prefHeight="25.0" prefWidth="396.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <TextField fx:id="TaskManager_username" prefHeight="25.0" prefWidth="396.0" styleClass="username" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <GridPane.margin>
-            <Insets bottom="100.0" left="190.0" right="25.0" />
+            <Insets bottom="100.0" left="200.0" right="25.0" />
          </GridPane.margin>
       </TextField>
       <PasswordField fx:id="TaskManager_password" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <GridPane.margin>
-            <Insets bottom="50.0" left="190.0" right="25.0" top="55.0" />
+            <Insets bottom="50.0" left="200.0" right="25.0" top="55.0" />
          </GridPane.margin>
       </PasswordField>
       <Button fx:id="TaskManager_connexion" mnemonicParsing="false" onAction="#handleConnect" text="Connexion" GridPane.columnIndex="1" GridPane.rowIndex="2">
@@ -91,7 +76,7 @@
             <Insets bottom="150.0" left="200.0" />
          </GridPane.margin>
       </Button>
-      <Text fx:id="statusbar" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="328.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <Text fx:id="statusbar" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="Text" wrappingWidth="328.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <font>
             <Font size="20.0" />
          </font></Text>
@@ -100,8 +85,16 @@
             <Font size="9.0" />
          </font>
          <GridPane.margin>
-            <Insets bottom="80.0" right="135.0" />
+            <Insets bottom="100.0" right="135.0" />
          </GridPane.margin>
       </Hyperlink>
+      <ImageView fitHeight="66.0" fitWidth="149.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.valignment="CENTER">
+         <image>
+            <Image url="@../image/Logoensim.gif" />
+         </image>
+         <GridPane.margin>
+            <Insets bottom="80.0" right="10.0" />
+         </GridPane.margin>
+      </ImageView>
    </children>
 </GridPane>
