--- a/TaskManager/bin/view/NewTask.fxml
+++ b/TaskManager/bin/view/NewTask.fxml
@@ -5,8 +5,6 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -81,13 +79,6 @@
                   <Font size="15.0" />
                </font>
             </Text>
-            <MenuButton fx:id="NewTask_priority" layoutX="99.0" layoutY="194.0" mnemonicParsing="false" text="Priority">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Action 1" />
-                <MenuItem mnemonicParsing="false" text="Action 2" />
-                  <MenuItem mnemonicParsing="false" text="Action 3" />
-              </items>
-            </MenuButton>
             <Text layoutX="31.0" layoutY="255.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Deadline :">
                <font>
                   <Font size="15.0" />
@@ -104,7 +95,8 @@
                   <Font size="15.0" />
                </font>
             </Text>
-            <MenuButton fx:id="NewTask_performer" layoutX="109.0" layoutY="273.0" mnemonicParsing="false" />
+            <ComboBox fx:id="NewTask_priority" layoutX="94.0" layoutY="194.0" prefWidth="150.0" />
+            <ComboBox fx:id="NewTask_performer" layoutX="107.0" layoutY="273.0" prefWidth="150.0" />
          </children>
       </AnchorPane>
       <ImageView fitHeight="61.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
