--- a/TaskManager/src/view/PreviewTask.fxml
+++ b/TaskManager/src/view/PreviewTask.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="150.0" style="-fx-border-width: 2;" styleClass="GridPane" stylesheets="@PreviewTask.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#openTask" prefHeight="150.0" prefWidth="150.0" style="-fx-border-width: 2;" styleClass="GridPane" stylesheets="@PreviewTask.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ControllerPreviewTask">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
@@ -19,15 +18,14 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label GridPane.halignment="CENTER" GridPane.valignment="TOP">
+      <Label fx:id="PreviewTask_Title" GridPane.halignment="CENTER" GridPane.valignment="TOP">
          <font>
             <Font name="Palatino Linotype" size="18.0" />
          </font>
       </Label>
-      <Label GridPane.rowIndex="1">
+      <Label fx:id="PreviewTask_Author" GridPane.rowIndex="1">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
@@ -35,7 +33,7 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Label GridPane.rowIndex="2" GridPane.valignment="CENTER">
+      <Label fx:id="PreviewTask_State" GridPane.rowIndex="2" GridPane.valignment="CENTER">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
@@ -46,7 +44,7 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Label GridPane.rowIndex="3" GridPane.valignment="CENTER">
+      <Label fx:id="PreviewTask_DeadLine" GridPane.rowIndex="3" GridPane.valignment="CENTER">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
@@ -57,7 +55,7 @@
             <Insets left="10.0" />
          </GridPane.margin>
       </Label>
-      <Label GridPane.rowIndex="4" GridPane.valignment="CENTER">
+      <Label fx:id="PreviewTask_Performer" GridPane.rowIndex="4" GridPane.valignment="CENTER">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
@@ -68,7 +66,7 @@
             <Insets left="10.0" />
          </GridPane.margin>
       </Label>
-      <Label GridPane.rowIndex="5" GridPane.valignment="CENTER">
+      <Label fx:id="PreviewTask_CreationDate" GridPane.rowIndex="5" GridPane.valignment="CENTER">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
@@ -78,14 +76,6 @@
          <GridPane.margin>
             <Insets left="10.0" />
          </GridPane.margin>
-      </Label>
-      <Label GridPane.rowIndex="6">
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-         <font>
-            <Font size="14.0" />
-         </font>
       </Label>
    </children>
    <padding>
